@@ -1,0 +1,4 @@
+/* 
+  Place all the styles related to the matching controller here.
+  They will automatically be included in application.css.
+*/
