@@ -37,6 +37,12 @@ class ControllerGeneratorTest < Rails::Generators::TestCase
     assert_no_file "test/unit/helpers/account_helper_test.rb"
   end
 
+  def test_invokes_assets
+    run_generator
+    assert_file "app/assets/javascripts/account.js"
+    assert_file "app/assets/stylesheets/account.css"
+  end
+
   def test_invokes_default_test_framework
     run_generator
     assert_file "test/functional/account_controller_test.rb"
